--- a/index.html
+++ b/index.html
@@ -209,18 +209,21 @@
                 <p class="text">Esses são alguns projetos pessoais:</p>
                 <div class="projetos">
                     <article class="container-proj">
-                      
-                            <div class="project-box proje1">
-                                <div class="info-project"> <p>Projeto 01</p>
-                                    <span class="tex">O objetivo desse projeto é mostrar  os lugares <br>histórico e culturas de outros países para <br> explorar.</span>
-                                </div>
-                            </div> 
+                            <a href="https://criscaetano3.github.io/Lugares-interessant/">
+                                <div class="project-box proje1">
+                                    <div class="info-project"> <p>Projeto 01</p>
+                                       <span class="tex">O objetivo desse projeto é mostrar  os lugares <br>histórico e culturas de outros países para <br> explorar.</span>
+                                    </div>
+                                </div> 
+                            </a>
 
-                            <div class="project-box proje2">
-                                <div class="info-project"><p>Projeto 02</p>
-                                     <span class="tex">Esse projeto mostra a previsão do tempo <br>que oferece informações sobre as condições <br>climática em tempo real.</span>
+                            <a href="https://criscaetano3.github.io/Previsao-Tempo/">
+                                <div class="project-box proje2">
+                                    <div class="info-project"><p>Projeto 02</p>
+                                         <span class="tex">Esse projeto mostra a previsão do tempo <br>que oferece informações sobre as condições <br>climática em tempo real.</span>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                            
 
                     </article>
