--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>      
     <!-- Menu -->
@@ -29,6 +30,9 @@
                 </li>
                 <li>
                     <a href="#mp" class="js-link">Meus projetos</a>
+                </li>
+                 <li>
+                    <a href="#mp" class="js-link">Formação Acadêmica</a>
                 </li>
                  <li>
                     <a href="https://drive.google.com/file/d/10P9GFvtG0WzdTvTDS1kZG2rOTv1oAL_R/view?usp=drivesdk">Currículo</a>
@@ -209,9 +213,18 @@
                 <p class="text">Esses são alguns projetos pessoais:</p>
                 <div class="projetos">
                     <article class="container-proj">
+
+                            <a href="https://criscaetano3.github.io/Meu-portif-lio/">
+                                <div class="project-box proje">
+                                    <div class="info-project"> <p>Projeto 01</p>
+                                       <span class="tex">Esse projeto é o meu portifólio trazendo <br> informações relevante sobre mim. </span>
+                                    </div>
+                                </div> 
+                            </a>
+
                             <a href="https://criscaetano3.github.io/Lugares-interessant/">
                                 <div class="project-box proje1">
-                                    <div class="info-project"> <p>Projeto 01</p>
+                                    <div class="info-project"> <p>Projeto 02</p>
                                        <span class="tex">O objetivo desse projeto é mostrar  os lugares <br>histórico e culturas de outros países para <br> explorar.</span>
                                     </div>
                                 </div> 
@@ -219,7 +232,7 @@
 
                             <a href="https://criscaetano3.github.io/Previsao-Tempo/">
                                 <div class="project-box proje2">
-                                    <div class="info-project"><p>Projeto 02</p>
+                                    <div class="info-project"><p>Projeto 03</p>
                                          <span class="tex">Esse projeto mostra a previsão do tempo <br>que oferece informações sobre as condições <br>climática em tempo real.</span>
                                     </div>
                                 </div>
@@ -230,6 +243,36 @@
 
                 </div>
              </section>
+             
+             <!-- Página Formação Acadêmica -->
+             <section class="section" id="Formação academica">
+                <h1><span style="color: white; font-size: 50px;">Formação</span><span style="color: rgb(255, 85, 0); font-size: 50px;"> Acadêmica</span></h1>
+                <h3 class="text2"> <span style="font-size: 40px;">Cursando:</span></h3>
+
+                <div class="container-formacao">
+                     <div class="logo-uninter">
+                        <img src="imagens/uninter.png" alt="uninter" width="200px" height="200px">
+                    </div>
+                    <div class="caixa">
+                        <p class="ano">2025</p>
+                        <h3 class="text1">Bacharelado</h3>
+                        <p>Engeharia de Software</p>
+                        <p class="txt">Cento de Universidade Internacional (UNINTER)</p>
+                    </div>
+                </div>
+                <div class="container-formacao">
+                     <div class="logo-uninter">
+                        <img src="imagens/uninter.png" alt="uninter" width="200px" height="200px">
+                    </div>
+                    <div class="caixa">
+                         <p class="ano">2025</p>
+                        <h3 class="text1">Curso</h3>
+                        <p>Inglês</p>
+                        <p class="txt">Cento de Universidade Internacional (UNINTER)</p>
+                    </div>
+                </div>
+               
+            </section>
         </main>  
 
 
