--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Meu Portifólio</title>
     <link rel="stylesheet" href="style.css">
 
+
+
 </head>
 <body>      
     <!-- Menu -->
@@ -35,9 +37,11 @@
                     <a href="#mp" class="js-link">Formação Acadêmica</a>
                 </li>
                  <li>
+                    <!-- link para meu currículo -->
                     <a href="https://drive.google.com/file/d/10P9GFvtG0WzdTvTDS1kZG2rOTv1oAL_R/view?usp=drivesdk">Currículo</a>
                 </li>
                  <br>
+                 <!-- link para meu whatsapp -->
                  <a href="https://wa.link/llwejl">
                     <button>Meu Contato</button>
                  </a>
@@ -45,6 +49,7 @@
         </header>
         <!-- Página inicial -->
         <main>
+            <!-- Todas as section tem id que direciona as paginas  -->
             <section class="section" id="inicio">
             <div class="image-container">
                 <div class="container-text"> 
@@ -52,6 +57,7 @@
                     <h4>Olá! Me chamo Crislaine Caetano, sou estudante de Engenharia de Software. <br> Tenho familiaridade em HTML, CSS, JavaScript. Ajudo empresas a transformar sonhos em códigos. </h4>
                     <div class="redes-sociais"> 
                         <span>
+                            <!-- links para minhas redes sociais -->
                         <a href="https://www.instagram.com/crislaine_caetano2?igsh=MTNmb292OTE2cDBlZA=="><button><img src="imagens/intagram1.png" alt="instagram"></button></a>
                         <a href="mailto:criscaetano12k@gmail.com"><button><img src="imagens/gmail1.png" alt="gmail1" width="25px" height="25px"></button></a>
                         <a href="https://www.linkedin.com/in/crislaine-caetano-968a20350?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><button><img src="imagens/linkdim1.png" alt="linkdin" width="25px" height="25px"></button></a>
