--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
                  <li>
                     <!-- link para meu currículo -->
-                    <a href="https://drive.google.com/file/d/10P9GFvtG0WzdTvTDS1kZG2rOTv1oAL_R/view?usp=drivesdk">Currículo</a>
+                    <a href="imagens/Crislaine Paulina Caetano.pdf">Currículo</a>
                 </li>
                  <br>
                  <!-- link para meu whatsapp -->
