--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <section class="section" id="inicio">
             <div class="image-container">
                 <div class="container-text"> 
-                    <h1><span style="color: white;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-size: 50px;">Eleve seu negócio <br>digital a outro nível</span> <br><span style="color: rgb(255, 85, 0);font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-size: 50px;">com um Front-end de qualidade!</span></h1>
+                    <h1><span style="color: white;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-size: 50px;">Eleve seu negócio <br>digital a outro nível</span> <br><span style="color: rgb(255, 85, 0);font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-size: 50px;">com um Desenvolvedor de qualidade!</span></h1>
                     <h4>Olá! Me chamo Crislaine Caetano, sou estudante de Engenharia de Software. <br> Tenho familiaridade em HTML, CSS, JavaScript. Ajudo empresas a transformar sonhos em códigos. </h4>
                     <div class="redes-sociais"> 
                         <span>
