--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                 <li>
                     <a href="#mp" class="js-link">Meus projetos</a>
                 </li>
-                 <li>
+                <li>
                     <a href="#mp" class="js-link">Formação Acadêmica</a>
                 </li>
-                 <li>
+                <li>
                     <!-- link para meu currículo -->
-                    <a href="imagens/Crislaine Paulina Caetano.pdf">Currículo</a>
+                    <a href="file:///C:/Users/crislainecaetano/OneDrive/Documentos/curriculo/curriculo.pdf">Currículo</a>
                 </li>
-                 <br>
+                <br>
                  <!-- link para meu whatsapp -->
-                 <a href="https://wa.link/llwejl">
+                <a href="https://wa.link/llwejl">
                     <button>Meu Contato</button>
-                 </a>
+                </a>
             </div>
         </header>
         <!-- Página inicial -->
@@ -52,18 +52,19 @@
             <!-- Todas as section tem id que direciona as paginas  -->
             <section class="section" id="inicio">
             <div class="image-container">
-                <div class="container-text"> 
-                    <h1><span style="color: white;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-size: 50px;">Eleve seu negócio <br>digital a outro nível</span> <br><span style="color: rgb(255, 85, 0);font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-size: 50px;">com um Front-end de qualidade!</span></h1>
-                    <h4>Olá! Me chamo Crislaine Caetano, sou estudante de Engenharia de Software. <br> Tenho familiaridade em HTML, CSS, JavaScript. Ajudo empresas a transformar sonhos em códigos. </h4>
-                    <div class="redes-sociais"> 
-                        <span>
+                <div class="caixa-main">
+                   <div class="foto"><img src="imagens/foto.jpg" width="200px" height="200px" alt="foto"></div>
+                   <div class="container-text">
+                      <h1>Crislaine Caetano</h1>
+                      <h2>Estudante de Engenharia de Software</h2>
+                       <span>
                             <!-- links para minhas redes sociais -->
                         <a href="https://www.instagram.com/crislaine_caetano2?igsh=MTNmb292OTE2cDBlZA=="><button><img src="imagens/intagram1.png" alt="instagram"></button></a>
                         <a href="mailto:criscaetano12k@gmail.com"><button><img src="imagens/gmail1.png" alt="gmail1" width="25px" height="25px"></button></a>
                         <a href="https://www.linkedin.com/in/crislaine-caetano-968a20350?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><button><img src="imagens/linkdim1.png" alt="linkdin" width="25px" height="25px"></button></a>
                         </span>
                     </div>
-                </p></div>
+                </div>
             </div>
             </section>
             <!-- Página Sobre Mim -->
@@ -71,10 +72,10 @@
                 <div class="interface">
                    <div class="text-sobre">
 
-                    <h1 class="titulo-section"><span style="color:white;font-size: 50px;">Sobre</span>  <span style="color: rgb(255, 85, 0); font-size: 50px;">Mim</span></h1>
+                    <h1 class="titulo-section"><span style="color: rgb(255, 85, 0); font-size: 50px;">Sobre Mim</span></h1>
 
                     <p>Sou estudante de Engenharia de Software no Centro Universitário Internacional (UNINTER), <br>e tenho como uma das minhas paixões transmitir experiências incríveis e envolventes para os usuários. <br>Sou uma profissional que estou sempre buscando me aperfeiçoar e aprender novas tecnologias.
-                        <br><br>Fui apresentada  ao munda da tecnologia online, e desde então sempre amei estar nessa área. <br> 
+                        <br><br>Fui apresentada  ao mundo da tecnologia, online e desde então sempre amei estar nessa área. <br> 
                         Estou sempre em busca de melhorar minhas habilidades e conhecimento para que posso  <br> experimentar as tecnologias mais recentes.
                     </p>
                    </div>  
@@ -85,13 +86,13 @@
             </section>
             <!-- Página Tecnologia que trabalho -->
             <section class="section" id="tecnologias-que-trabalho">
-                <h1 class="titulo"><span style="color: white; font-size: 50px;">Tecnologia que</span><span style="color: rgb(255, 85, 0); font-size: 50px;"> Trabalho</span></h1>
+                <h1 class="titulo"><span style="color: rgb(255, 85, 0); font-size: 50px;"> Tecnologia que Trabalho</span></h1>
                 <div class="tecnologias-logo">
 
                     <p> Aqui estão algumas tecnologias com as quais estou familiarizada:</p>
 
                     <div class="container">
-                        <div> <h1 class="font"><span style="color: white;font-size: 30px;">Front-end</span></h1>
+                        <div> <h1 class="font"><span style="color: #000;font-size: 30px;">Front-end</span></h1>
                         <div class="logo-tec">
                           <img src="imagens/HTML1.png" alt="html" width="80px" height="80px"><span class="icone-tec"> HTML</span>
                         </div>
@@ -112,7 +113,7 @@
                         </div>
                         </div>
                     
-                    <div> <h1 class="font"><span style="color: white;font-size: 30px;">Back-End</span></h1>
+                    <div> <h1 class="font"><span style="color: #000;font-size: 30px;">Back-End</span></h1>
 
                         <div class="logo-tec">
                           <img src="imagens/python1.png" alt="python" width="80px" height="80px"><span class="icone-tec">python</span>
@@ -134,7 +135,7 @@
             </section>
             <!-- Página minhas Habilidades -->
              <section class="section" id="minhas-habilidades">
-                <h1 class="titulo"><span style="color: white;font-size: 50px;">Minhas</span><span style="color: rgb(255, 85, 0);font-size: 50px;"> Habilidades</span></h1>
+                <h1 class="titulo"><span style="color: rgb(255, 85, 0);font-size: 50px;">Minhas Habilidades</span></h1>
                 <div class="container-habilidade"> 
                     <div>
                         <div class="txt">Aprendizado ininterrupto
@@ -185,7 +186,7 @@
              </section>
             <!-- Página Meus serviços Contratáveis -->
              <section class="section" id="msc">
-                <h1><span style="color: white; font-size: 50px;">Meus Serviços</span><span style="color: rgb(255, 85, 0); font-size: 50px;"> Contratáveis</span></h1>
+                <h1><span style="color: rgb(255, 85, 0); font-size: 50px;"> Meus Serviços Contratáveis</span></h1>
 
                 <div class="serviços">
                     <div>
@@ -215,7 +216,7 @@
                 <!-- Página meus projetos -->
              </section>
              <section class="section" id="mp">
-                <h1><span style="color: white; font-size: 50px;">Meus</span><span style="color: rgb(255, 85, 0); font-size: 50px;"> Projetos</span></h1>
+                <h1><span style="color: rgb(255, 85, 0); font-size: 50px;">Meus Projetos</span></h1>
                 <p class="text">Esses são alguns projetos pessoais:</p>
                 <div class="projetos">
                     <article class="container-proj">
@@ -252,7 +253,7 @@
              
              <!-- Página Formação Acadêmica -->
              <section class="section" id="Formação academica">
-                <h1><span style="color: white; font-size: 50px;">Formação</span><span style="color: rgb(255, 85, 0); font-size: 50px;"> Acadêmica</span></h1>
+                <h1><span style="color: rgb(255, 85, 0); font-size: 50px;">Formação Acadêmica</span></h1>
                 <h3 class="text2"> <span style="font-size: 40px;">Cursando:</span></h3>
 
                 <div class="container-formacao">
