--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h2>Estudante de Engenharia de Software</h2>
 
   <div class="redes">
-    <a href="mailto:criscaetano12k@gmail.com">Email</a>
+    <a href="mailto:crislainecaetano51@gmail.com">Email</a>
     <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
     <a href="https://github.com/criscaetano3" target="_blank">GitHub</a>
   </div>
