--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <a href="https://criscaetano3.github.io/Previsao-Tempo/" target="_blank">Ver projeto</a>
     </div>
 
-    <div class="project-card">
+    <!-- <div class="project-card">
       <h3>Contador de Rebanho</h3>
       <p>
         Sistema em desenvolvimento que simula a automação da contagem de animais em um rebanho, com foco em lógica de programação, organização de dados e validação de entradas. O projeto representa a aplicação de tecnologia no agronegócio, explorando conceitos de automação e controle.
@@ -139,7 +139,7 @@
       </p>
 
       <a href="https://criscaetano3.github.io/contadorRebanho/">Ver projeto</a>
-    </div>
+    </div> -->
 
   </div>
 </section>
